--- a/frutas.html
+++ b/frutas.html
@@ -175,5 +175,6 @@
 
 
     <script src="frutas.js"></script>
-</body>
+    <!-- la vinculacion frutas.js tiene el en su interior la practica del carrito de compra y la explicacion del metodo de array -->
+    
 </html>
