--- a/frutas.html
+++ b/frutas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,8 +9,8 @@
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 <body>
-    <main class="container mt-5">
-        <div class="row text-center">
+    <main class="container mt-4">
+        <div class="rogit w text-center">
             
             <article class="col-sm-4 col-md-4 mb-3">
                 <div class="card">
